--- a/styles.css
+++ b/styles.css
@@ -492,6 +492,7 @@ h1, h2, h3, h4, h5, h6 {
     font-style: normal;
     font-weight: 600;
     line-height: 150%;
+    margin-bottom: 10%;
 }
 
 .app_button-edit:disabled {
